--- a/css/styles.css
+++ b/css/styles.css
@@ -243,12 +243,27 @@ padding-left: 0;
 
 /* Portfolio styles */
 
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
 .projects {
     padding-top: 94px;
     padding-bottom: 94px;
 }
 
+
 .projects-btn {
+    border-radius: 4px;
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -264,6 +279,18 @@ padding-left: 0;
     background-color: var(--accent-color);
 }
 
+/* .button-list {
+    display: flex; 
+    flex-wrap: nowrap;
+    margin-left: -10px;
+}
+
+.projects-btn {
+    flex-basis: calc((100% - 50px) / 5);
+    margin-left: 10px;
+
+} */
+
 .container .projects-title {
     font-weight: 700;
     font-size: 18px;
@@ -278,4 +305,16 @@ padding-left: 0;
     line-height: 1.89;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+}
+
+
+.projects-list  {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+}
+
+.projects-items {
+    flex-basis: calc((100% - 90px) / 3);
+    margin-left: 30px;
 }
