--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ padding-left: 0;
 .header {
     padding-top: 32px;
     padding-bottom: 32px;
-    border: 1px solid rgba(0, 0, 0, 1);
+    border-bottom: 1px solid #ECECEC;
 }
 
 .header .container {
@@ -164,9 +164,15 @@ padding-left: 0;
 
 
 /* Преимущества */
-
+.benefits {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 .benefits-list {
     display: flex;
+}
+.benefits-item {
+    width: 270px;
 }
 
 .benefits-item:not(:last-child){
@@ -174,7 +180,6 @@ padding-left: 0;
 }
 
 .benefits-title {
-    margin-top: 94px;
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
@@ -182,10 +187,9 @@ padding-left: 0;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--title-text-color);
-
 }
+
 .benefits-text { 
-    margin-bottom: 94px; 
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -206,16 +210,14 @@ padding-left: 0;
     letter-spacing: 0.03em;
     color: var(--title-text-color); 
 }
-
+.service-title {
+    margin-bottom: 50px;
+}
 .service {
-    padding-top: 50px;
+    padding-top: 94px;
     padding-bottom: 94px;
 }
 
-.service-title {
-    margin-top: 94px;
-    margin-bottom: 50px;
-}
 .service-list {
     display: flex;
 }
@@ -231,9 +233,14 @@ padding-left: 0;
 
 .section-team {
     background-color: #F5F4FA;
-    margin-top: 94px;
-    margin-bottom: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
+
+.section-title {
+    margin-bottom: 50px;
+}
+
 .team-list {
     display: flex;
     list-style: none;
@@ -255,26 +262,24 @@ padding-left: 0;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
+    text-align: center;
 }
 
-.team-item {
-    margin-top: 186px;
-    margin-bottom: 94px;
+.title {
+    text-align: center;
+    padding-bottom: 10px;
 }
 
-.team-container{
+.team-container {
     padding-top: 30px;
     padding-bottom: 30px;
-    border-right:  1px solid #000000;
-    border-bottom: 1px solid #000000;
-    border-left: 1px solid #000000;
 } 
 
 /* Footer */
 
 .footer .container {
-    margin-top: 60px;
-    margin-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer .logo {
@@ -332,8 +337,8 @@ padding-left: 0;
 }
 
 .projects {
-    margin-top: 94px;
-    margin-bottom: 94px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .button-list {
@@ -345,6 +350,7 @@ padding-left: 0;
 } 
 
 .projects-btn {
+    padding: 6px 22px 6px 22px;
     border-radius: 4px;
     font-family: inherit;
     font-weight: 500;
@@ -394,7 +400,7 @@ padding-left: 0;
 
 .portfolio {
     padding: 20px 24px 20px 24px;
-    border-bottom: 1px solid #000000;  
+    border-bottom: 1px solid #EEEEEE;  
 }
 
 .container .projects-title {
@@ -423,4 +429,5 @@ padding-left: 0;
 .projects-items {
     flex-basis: calc((100% - 90px) / 3);
     margin-left: 30px;
+    margin-bottom: 30px;
 }
